# keyfi

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/keyfi/: Cargo.toml
programs/keyfi/src/: constants.rs  errors.rs  lib.rs
programs/keyfi/src/instructions/: check_strike.rs  claim_airdrop.rs  close_manifest.rs  create_manifest.rs  initialize.rs  key_in.rs  mint_and_inject.rs  mod.rs  refund.rs
programs/keyfi/src/state/: config.rs  escrow.rs  manifest.rs  mod.rs  voter.rs
scripts/: init-protocol.ts  seed-devnet.ts
sdk/: package.json  tsconfig.json
sdk/src/: constants.ts  index.ts  keyfi.ts  pda.ts  types.ts  utils.ts
tests/: airdrop.test.ts  key-in.test.ts  manifest.test.ts  refund.test.ts  strike.test.ts
tests/helpers/: accounts.ts  setup.ts
