[package]
name = "keyfi"
version = "0.1.0"
description = "KeyFi: Commit-to-Mint protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "keyfi"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
